--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 		</main>
 		<footer>
 			<p class="author">This page was created by <a href="https://twitter.com/scy">scy</a>, who would love to love his <a href="https://www.fxtec.com/pro1/">F(x)tec Pro1</a>.</p>
+			<p class="github">I’m open to pull requests for design or content. Find <a href="https://github.com/scy/has-the-pro1-been-patched-yet">this site on GitHub</a>.</p>
 			<p class="updated">Last update: 2020-May-08.</p>
 		</footer>
 	</body>
