--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				color: #000;
 				text-shadow: 0 0 0.05em #a00;
 			}
-			.author, .updated {
+			footer p {
 				font-size: 0.8em;
 				color: #666;
 			}
@@ -43,6 +43,7 @@
 				<hr />
 				<p class="patch-level"><a href="https://source.android.com/security/bulletin">Android Security Patch Level</a> is 2019-Oct-05.</p>
 				<p class="android-version">The latest OTA update is based on Android 9, built 2020-Mar-04.</p>
+				<hr />
 			</div>
 		</main>
 		<footer>
