There’s been a patch to 2020-04 today!

--- a/index.html
+++ b/index.html
@@ -23,9 +23,14 @@
 				margin: 0 auto;
 				max-width: 35em;
 			}
-			.no {
+			.big-word {
 				color: #000;
+			}
+			.no {
 				text-shadow: 0 0 0.05em #a00;
+			}
+			.kind-of {
+				text-shadow: 0 0 0.05em #aa0;
 			}
 			footer p {
 				font-size: 0.8em;
@@ -38,18 +43,18 @@
 			<h1>Has the Pro1 been patched yet?</h1>
 		</header>
 		<main>
-			<h1 class="no">No.</h1>
+			<h1 class="big-word kind-of">Kind of.</h1>
 			<div>
 				<hr />
-				<p class="patch-level"><a href="https://source.android.com/security/bulletin">Android Security Patch Level</a> is 2019-Oct-05.</p>
-				<p class="android-version">The latest OTA update is based on Android 9, built 2020-Mar-04.</p>
+				<p class="patch-level"><a href="https://source.android.com/security/bulletin">Android Security Patch Level</a> is 2020-Apr-05. More recent security patches are missing, but it’s lagging less than three months behind.</p>
+				<p class="android-version">The latest OTA update is based on Android 9, built 2020-Jun-20.</p>
 				<hr />
 			</div>
 		</main>
 		<footer>
 			<p class="author">This page was created by <a href="https://twitter.com/scy">scy</a>, who would love to love his <a href="https://www.fxtec.com/pro1">F(x)tec Pro1</a>.</p>
 			<p class="github">I’m open to pull requests for design or content. Find <a href="https://github.com/scy/has-the-pro1-been-patched-yet">this site on GitHub</a>.</p>
-			<p class="updated">Last update: 2020-Jun-10.</p>
+			<p class="updated">Last update: 2020-Jun-23.</p>
 		</footer>
 	</body>
 </html>
