--- a/index.html
+++ b/index.html
@@ -43,18 +43,18 @@
 			<h1>Has the Pro1 been patched yet?</h1>
 		</header>
 		<main>
-			<h1 class="big-word kind-of">Kind of.</h1>
+			<h1 class="big-word no">No.</h1>
 			<div>
 				<hr />
-				<p class="patch-level"><a href="https://source.android.com/security/bulletin">Android Security Patch Level</a> is 2020-Apr-05. More recent security patches are missing, but it’s lagging less than three months behind.</p>
-				<p class="android-version">The latest OTA update is based on Android 9, built 2020-Jul-07.</p>
+				<p class="patch-level"><a href="https://source.android.com/security/bulletin">Android Security Patch Level</a> is 2020-Apr-05. More recent security patches are missing, and it’s lagging more than three months behind.</p>
+				<p class="android-version">The latest OTA update is based on Android 9, built 2020-Aug-25.</p>
 				<hr />
 			</div>
 		</main>
 		<footer>
 			<p class="author">This page was created by <a href="https://twitter.com/scy">scy</a>, who would love to love his <a href="https://www.fxtec.com/pro1">F(x)tec Pro1</a>.</p>
 			<p class="github">I’m open to pull requests for design or content. Find <a href="https://github.com/scy/has-the-pro1-been-patched-yet">this site on GitHub</a>.</p>
-			<p class="updated">Last update: 2020-Jul-10.</p>
+			<p class="updated">Last update: 2020-Sep-21.</p>
 		</footer>
 	</body>
 </html>
